# Grocery-Delivery-Microservices

./: customer.db  delivery.db  main.py  order.db  package-lock.json  product.db  pyproject.toml  test_product.db
api-gateway/app/: main.py
customer-service/app/: main.py
delivery-service/app/: main.py
gateway/: main.py  pyproject.toml
gateway/core/: config.py
gateway/routers/: customer_proxy.py  delivery_proxy.py  order_proxy.py  product_proxy.py
gateway/tests/: conftest.py  test_gateway_customers.py  test_gateway_orders.py  test_gateway_products.py  test_gateway_workflow.py
order-service/app/: main.py
product-service/app/: main.py
services/customer-service/: database.py  main.py  pyproject.toml
services/delivery-service/: README.md  database.py  delivery.db  main.py  pyproject.toml
services/delivery-service/app/: main.py
services/delivery-service/app/db/: database.py
services/delivery-service/app/models/: delivery.py
services/delivery-service/app/routers/: delivery_routes.py
services/delivery-service/app/schemas/: delivery.py
services/delivery-service/app/services/: delivery_service.py
services/delivery-service/models/: delivery.py
services/delivery-service/routers/: delivery_routes.py
services/delivery-service/schemas/: delivery.py
services/delivery-service/services/: delivery_service.py
services/delivery-service/tests/: test_delivery.py
services/order-service/: cart_schema.py  database.py  main.py  pyproject.toml
services/product-service/: database.py  main.py  models.py  product.db  product_routes.py  product_schema.py  (+2 more)
(+20 files in other folders)
